src/components/draw/style/draw.less
@ga-select-box-padding: 1;
.ga-item-size(@width, @height, @nbCol, @nbItems, @btWidth) {
   /* (@width + 2*margin)*@nbCol + @btWidth + 2*padding */
   width: unit((@width + 4)*@nbCol + @btWidth + 2*@ga-select-box-padding , px);
   
   /* @height + 2*margin + 2*padding + 2*borderWidth */
   height: unit(@height + 4 + 2*@ga-select-box-padding + 2, px); 
      
   &.ga-select-box-open {
     height: unit(ceil(@nbItems/@nbCol)*(@height + 4) + 2*@ga-select-box-padding, px);
   }
   > * {
     margin: 2px;
     width: unit(@width, px);
     height: unit(@height, px);
   }
   button {
     padding-top: unit(@ga-select-box-padding, px);
   }
}

[ga-draw] {
  /* 100% doesn't work so we specify a fix width for the position
  of the more  button */
  width: 285px;
  @media (max-width: @screen-tablet), (max-height: @screen-sm-max-height) {
    width: auto;
  }

  .ga-draw-info-save {
    color: lightgray;
    margin-left: 30px;

    @media (max-width: @screen-tablet), (max-height: @screen-sm-max-height) {
      margin: 0;
    }
    @media (max-width: @screen-phone) {
      height: 20px;
    }
  }
  .ga-draw-disclaimer {
    margin-top: 5px;
    padding-top: 5px; 
    border-top: 1px solid rgb(238, 238, 238);
    font-size: 10px;

    a {
      color: red;
      text-decoration: none;

      &:hover {
        text-decoration: underline;
      }
    }
  }
  
  .ga-draw-disclaimer, .ga-draw-interaction-share {
    text-align: justify;
  }

  .ga-share-permalink {
    .form-group, .input-group {
      width: 100%;
    }
  }
   
  .ga-draw-buttons {
    margin-bottom: 45px;

    @media (max-width: @screen-tablet), (max-height: @screen-sm-max-height) {
      margin-bottom: 10px;
    }
    
    > .btn {
      margin: 5px 30px;
      width: 75px;
      height: 75px;
      padding: 2px;
      transition: all 0.5s ease;
      transition-property: width, height, margin;
 
      i {
        display: block;
        font-size: 2em;
        font-weight: bold;
      }

      @media (max-width: @screen-tablet), (max-height: @screen-sm-max-height) {
        &:first-child {
          margin-left: 0px;
        }

        width: 44px;
        height: 44px;
        margin: 5px 3px;

        i {
          font-size: 1.5em;
        }

        span {
          display: none;
        }
      }
    }
    
    button.btn-default {
      border: 2px solid #eeeeee;
      background-color: white;
      border-radius: 15px;

      &:hover, &:focus, &:active {
        background-color: #eeeeee;
      }
    }

    .ga-more {
      .btn {
        text-align: left;
      }
      button {
        width: 75px;
        float: right;
        margin-top: 5px;
        margin-right: 44px;

        @media (max-width: @screen-tablet), (max-height: @screen-sm-max-height) {
          width: auto;
          margin-top: -37px;
          margin-right: 0;
        }
      }
    }
  }
}

.ga-draw-help, .ga-draw-measure, .ga-draw-measure-static {
  background-color: rgba(140, 140, 140, 0.9);
  border-radius: 4px;
  color: white;
  padding: 2px 8px;
  font-size: 12px; 
}

.ga-draw-measure, .ga-draw-measure-static {
  &:after {
    position: absolute;
    left: 50%;
    bottom: -6px;
    margin-left: -7px;
    content: "";
    border-top: 6px solid rgba(140, 140, 140, 0.9);
    border-right: 6px solid transparent;
    border-left: 6px solid transparent;
  }
}

.ga-draw-measure-static {
  background-color: rgba(255, 0, 0, 0.9);
  &:after {
    border-top: 6px solid #f00;
  }
}


.ga-draw-popup {
  
  &.ga-profile-active {
    right: 0px;
  }

  &.ga-tabs {
    [ga-profile] {
      margin-top: 0px;
    }
  }
  [ga-profile] {
    margin-top: 28px;
  }
  @media (max-width: @screen-tablet), (max-height: @screen-sm-max-height) {
    .ga-icons, .ga-choose-icon {
      width: 100%;
      height: auto;
    }
  }
  .popover-title, .popover-content {
    width: auto;
  }

  .nav-tabs a {
    text-decoration: none;
    
    &.ga-active {
      background-color: red;
    }
  }
  
  [ga-profile] {
    width: 100%;
  }

  .popover-content {
    overflow:  auto;
    min-width: 356px;
    height: ~"calc(100% - 35px)";

    label {
      position: relative;
      margin-right: 5px;
    }

    span {
     width: 85px;
     padding-top: 5px;
     text-align: left;
    }

    label, span {
      vertical-align: top;
    }

    input, select, textarea {
      position: relative;
      font-weight: normal;
      width: 100%;
      left: 0px;
    }
    
    ul {
      margin-bottom: 15px;
    }

    .ga-draw-modify {
      width: 100%;
      
      > label {
        display: block;
      }
    }
    
    /* Generic css for custom select box */  
    .ga-select-box {
      position: relative;
      overflow: hidden;
      border: 1px solid lightgray;
      border-radius: 2px;
      padding: unit(@ga-select-box-padding, px);
      transition: height 0.5s ease;
           
      button {
        position: absolute;
        top: 0px;
        right: 0px;
        .transition-transform(0.5s ease);
      }

      > :not(button) {
        display: inline-block;
        cursor: pointer;
        margin: 2px;
            
        &:hover {
          background-color: #e9e9e9;
        }

        &.ga-selected, &.ga-selected:hover {
          background-color: darkgray;
          cursor: default;
        }
      }
    }
    .ga-select-box-open {
      button {
        .rotate(180deg);
      }
    }

   .ga-select-icons {
      .ga-item-size(36, 36, 4, 114, 38);
    }

   .ga-select-colors {
      .ga-item-size(24, 24, 8, 8, 2);
      
      [style] {
         width: 20px;
         height: 20px;
         margin: 2px;
         border-radius: 10px; 
      }
    }
    
    .ga-icon-draw {
      font-size: 32px;
      color: #ff0000;
      text-align: center;
    }

  }

  .ga-draw-interaction-btns {
    width: 100%;
    padding: 2px;

    button {
      margin-right: 2px;
    }
  }
}

